2004/01/31 16:19 (+0100) kaffeetisch

	* t/GtkFileChooserDialog.t
	* t/GtkFileChooserWidget.t: Initialize gtk+.

	* xs/PangoContext: Don't warn about unregistered subclasses of
	Gtk2::Pango::Fontset.

	* xs/PangoFont.xs: Don't warn about unregistered subclasses.
	Implement get_family.  Make better_match also accept undef for
	old_match.  Move Gtk2::PangoFont::get_metrics and implement
	::describe.

2004/01/30 22:49 (-0500) muppetman

	A examples/filesel_multisel.pl
	A examples/multisel.pl
	M MANIFEST
	  some examples i had lying around.

2004/01/30 08:06 (-0500) rwmcfa1

	* t/Gdk.t: wholey crap, s missing from the work test, DISPLAY was unset
	so i didn't know it.

2004/01/29 20:07 (-0500) rwmcfa1

	* Glib.pm, README: unstable release 1.033

	* NEWS: updated

	* t/Gdk.t: init failure fixed, see below

	1.032 isn't going public, was a test failure with no DISPLAY in Gtk2

2004/01/29 19:10 (-0500) rwmcfa1

	* Gtk2.pm, README: unstable release 1.032

	* NEWS: updated

2004/01/29 18:30 (-0500) rwmcfa1

	* t/01.GtkWindow.t, t/GdkDrawable.t, t/GdkWindow.t, t/GtkPaned.t: 
	temporary stop-gap fixes for test failures against HEAD, remotely 
	running windowmaker, that's a mouth full.

2004/01/28 15:42 (-0500) rwmcfa1

	* xs/GtkCalendar.xs, xs/GtkRenderer.xs, xs/GtkTextChildAnchor.xs,
	xs/GtkTextView.xs: apidoc updates

2004/01/28 00:27 (+0100) kaffeetisch

	A t/GdkSelection.t
	* MANIFEST: New test.

	* t/Gdk.t: Test Gtk2::Gdk::Threads::init, enter and leave.

2004/01/27 23:10 (+0100) kaffeetisch

	A t/GdkCursor.t
	A t/GdkKeys.t
	* MANIFEST: New tests.

	* t/GdkEvent.t: Test get_time, get_state, [sg]et_screen, axis and
	get_axis, coords and get_coords, put, get, peek,
	[sg]et_show_events, and Gtk2::Gdk::events_pending.

	* t/GtkTextIter.t: Test get_marks.

	* xs/GdkCursor.xs: Implement an accessor for cursor->type.  Take
	ownership of the cursor returned by new_for_display.  Add a class
	argument to new_from_pixbuf.

	* xs/GdkEvent.xs: Bind gdk_events_pending as