@@ -104,6 +104,7 @@ t/GdkRegion.t
 t/GdkScreen.t
 t/GdkSelection.t
 t/GdkWindow.t
+t/GdkX11.t
 t/GtkAccelGroup.t
 t/GtkAccelLabel.t
 t/GtkAccelMap.t
@@ -225,6 +226,9 @@ t/GtkVScrollbar.t
 t/GtkVSeparator.t
 t/GtkViewport.t
 t/GtkWidget.t
+t/PangoContext.t
+t/PangoFont.t
+t/PangoTabs.t
 tools/fetch_faq.pl
 tools/genkeysyms.pl
 tools/genmaps.pl
